Bug 110355 - radeonsi: GTK elements become invisible in some applications (GIMP, LibreOffice)
Summary: radeonsi: GTK elements become invisible in some applications (GIMP, LibreOffice)
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-08 14:08 UTC by Diego Viola
Modified: 2019-04-25 15:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
bisect log (2.44 KB, text/plain)
2019-04-08 14:10 UTC, Diego Viola
Details
Screenshot showing the problem (101.56 KB, image/png)
2019-04-08 14:21 UTC, Diego Viola
Details
Screnshot without the issue (101.80 KB, image/png)
2019-04-08 14:22 UTC, Diego Viola
Details
Xephyr.trace (2.04 MB, application/octet-stream)
2019-04-08 14:48 UTC, Diego Viola
Details

Description Diego Viola 2019-04-08 14:08:58 UTC
I am currently experiencing some issues with GTK elements (GtkMenuItem, GtkMenu) becoming invisible with GIMP and LibreOffice.

I am currently using radeonsi+glamor and I'm on Arch Linux (x86_64).

My hardware is a Ryzen 5 2400G APU with vega graphics.

The issue goes away if I start the application with this variable: LIBGL_ALWAYS_SOFTWARE=1.
Comment 1 Diego Viola 2019-04-08 14:10:05 UTC
I've bisected the issue, here is the bad commit:

[diego@archtest mesa]$ git bisect good
1b25d340b791ad8350bdfb27f1a91ac79fa17748 is the first bad commit
commit 1b25d340b791ad8350bdfb27f1a91ac79fa17748
Author: Sonny Jiang <sonny.jiang@amd.com>
Date:   Mon Dec 3 12:36:33 2018 -0500

    radeonsi: use compute for resource_copy_region when possible
    
    v2: marek: fix snorm8 blits
    
    Signed-off-by: Sonny Jiang <sonny.jiang@amd.com>
    Signed-off-by: Marek Olšák <marek.olsak@amd.com>

:040000 040000 2c64a549c6512a622312f0a5955cafc17c99ae91 7615411b88672f53247c0393d28898672d8f49e1 M	src
[diego@archtest mesa]$
Comment 2 Diego Viola 2019-04-08 14:10:41 UTC
Created attachment 143894 [details]
bisect log
Comment 3 Diego Viola 2019-04-08 14:14:13 UTC
Mesa was installed to /usr/local.

/usr/local/lib was added to /etc/ld.so.conf.d/mesa.conf.

libgbm, libEGL is being loaded from /usr/local/lib and radeonsi_dri.so is being loaded from  /usr/local/lib/dri.

LLVM 7.0.1 was used to compile mesa.
Comment 4 Diego Viola 2019-04-08 14:21:59 UTC
Created attachment 143895 [details]
Screenshot showing the problem

Notice the lack of the "Help" menu item.
Comment 5 Diego Viola 2019-04-08 14:22:57 UTC
Created attachment 143896 [details]
Screnshot without the issue

GIMP started with LIBGL_ALWAYS_SOFTWARE=1 so it doesn't present the issue.
Comment 6 Diego Viola 2019-04-08 14:28:26 UTC
System details:

Arch Linux (x86_64)
mesa 19.0.1-2
xorg-server 1.20.4-1
llvm7 7.0.1-1
i3-wm 4.16.1-1
xorg-server-xephyr 1.20.4-1

- I've downgraded llvm8 to llvm7 before I bisected because mesa-18.3.5 required llvm7.
- Xephyr was used when I bisected (I ran GIMP inside Xephyr -glamor :1), the issue can also be reproduced with Xorg.
Comment 7 Michel Dänzer 2019-04-08 14:37:46 UTC
(In reply to Diego Viola from comment #0)
> The issue goes away if I start the application with this variable:
> LIBGL_ALWAYS_SOFTWARE=1.

As discussed on IRC, presumably this would have to be set for the X server process, not the application.

Can you attach an apitrace of reproducing the problem in Xephyr?
Comment 8 Diego Viola 2019-04-08 14:48:43 UTC
Created attachment 143899 [details]
Xephyr.trace

To reproduce it:

$ apitrace replay Xephyr.trace -w

I used apitrace 7.1-3.
Comment 9 Diego Viola 2019-04-12 23:02:17 UTC
I get the same problem with GNOME 3.32 on archlinux (Wayland and GNOME Xorg).
Comment 10 Marek Olšák 2019-04-17 23:05:01 UTC
The bug has nothing to do with compute. The compute blit removed gfx-based blits from the gfx pipeline, which uncovered a bug in the driver.
Comment 11 Diego Viola 2019-04-18 19:05:02 UTC
(In reply to Marek Olšák from comment #10)
> The bug has nothing to do with compute. The compute blit removed gfx-based
> blits from the gfx pipeline, which uncovered a bug in the driver.

Hi Marek,

I tested your patches from this series:

https://patchwork.freedesktop.org/patch/300465/?series=59674&rev=1

and my issue is fixed after applying your patches, thank you. :D
Comment 12 Marek Olšák 2019-04-25 15:50:24 UTC
Fixed by 440135e5a0d178c537db3f96e6823bc8220a0f3f. Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.